compiler/toc_hir_lowering/tests/snapshots/lowering__lower_int_radix_literal-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := 30#\n"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..9): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..8): []
        Assign@(FileId(1), 0..8)
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..8): Integer(0)
error in file FileId(1) at 5..8: invalid int literal
| error in file FileId(1) for 5..8: missing radix digits

