compiler/toc_hir_lowering/tests/snapshots/lowering__lower_int_radix_literal-5.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := 37#asda"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..12): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..12): []
        Assign@(FileId(1), 0..12)
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..12): Integer(0)
error in file FileId(1) at 5..12: invalid int literal
| error in file FileId(1) for 5..7: base is not between 2 - 36

