compiler/toc_hir_lowering/tests/snapshots/lowering__lower_int_radix_literal-6.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := 0#0000"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..11): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..11): []
        Assign@(FileId(1), 0..11)
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..11): Integer(0)
error in file FileId(1) at 5..11: invalid int literal
| error in file FileId(1) for 5..6: base is not between 2 - 36

