compiler/toc_hir_lowering/tests/snapshots/lowering__lower_int_radix_literal-9.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := 10#999a9a9"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..15): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..15): []
        Assign@(FileId(1), 0..15)
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..15): Integer(0)
error in file FileId(1) at 11..12: invalid digit for the specified base

