compiler/toc_hir_lowering/tests/snapshots/lowering__lower_int_radix_literal.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := 16#EABC"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..12): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..12): []
        Assign@(FileId(1), 0..12): None
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..12): Integer(60092)

