compiler/toc_hir_lowering/tests/snapshots/lowering__lower_loop_stmt.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: loop end loop

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..13): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..13): []
        Loop@(FileId(1), 0..13)

