compiler/toc_hir_lowering/tests/snapshots/lowering__lower_module_def-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "\n        module z\n            export ~.a, ~.b\n            var a, b : int\n        end z\n        module y\n            export ~.*all\n            var c, d : int\n        end y\n\n        % non pervasive\n        var i : int\n        i := a\n        i := b\n\n        % pervasive\n        module x\n            var i : int\n            i := c\n            i := d\n        end x\n        "

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(9)
    Module@(FileId(1), 0..368): "<root>"@(dummy)
      StmtBody@(FileId(1), 9..359): []
        StmtItem@(FileId(1), 9..86): ItemId(2)
          Module@(FileId(1), 9..86): "z"@(FileId(1), 16..17), exports [Const Unqualified "a"@(FileId(1), 62..63), Const Unqualified "b"@(FileId(1), 65..66)]
            StmtBody@(FileId(1), 58..72): []
              StmtItem@(FileId(1), 58..72): ItemId(0)
                ConstVar@(FileId(1), 58..72): var "a"@(FileId(1), 62..63)
                  Primitive@(FileId(1), 69..72): Int
              StmtItem@(FileId(1), 58..72): ItemId(1)
                ConstVar@(FileId(1), 58..72): var "b"@(FileId(1), 65..66)
                  Primitive@(FileId(1), 69..72): Int
        StmtItem@(FileId(1), 95..170): ItemId(5)
          Module@(FileId(1), 95..170): "y"@(FileId(1), 102..103), exports [Const PervasiveUnqualified "c"@(FileId(1), 146..147), Const PervasiveUnqualified "d"@(FileId(1), 149..150)]
            StmtBody@(FileId(1), 142..156): []
              StmtItem@(FileId(1), 142..156): ItemId(3)
                ConstVar@(FileId(1), 142..156): var "c"@(FileId(1), 146..147)
                  Primitive@(FileId(1), 153..156): Int
              StmtItem@(FileId(1), 142..156): ItemId(4)
                ConstVar@(FileId(1), 142..156): var "d"@(FileId(1), 149..150)
                  Primitive@(FileId(1), 153..156): Int
        StmtItem@(FileId(1), 204..215): ItemId(6)
          ConstVar@(FileId(1), 204..215): var "i"@(FileId(1), 208..209)
            Primitive@(FileId(1), 212..215): Int
        Assign@(FileId(1), 224..230)
          Name@(FileId(1), 224..225): "i"@(FileId(1), 208..209)
          Name@(FileId(1), 229..230): "a"@(FileId(1), 39..40)
        Assign@(FileId(1), 239..245)
          Name@(FileId(1), 239..240): "i"@(FileId(1), 208..209)
          Name@(FileId(1), 244..245): "b"@(FileId(1), 44..45)
        StmtItem@(FileId(1), 275..359): ItemId(8)
          Module@(FileId(1), 275..359): "x"@(FileId(1), 282..283)
            StmtBody@(FileId(1), 296..345): []
              StmtItem@(FileId(1), 296..307): ItemId(7)
                ConstVar@(FileId(1), 296..307): var "i"@(FileId(1), 300..301)
                  Primitive@(FileId(1), 304..307): Int
              Assign@(FileId(1), 320..326)
                Name@(FileId(1), 320..321): "i"@(FileId(1), 300..301)
                Name@(FileId(1), 325..326): "c"@(FileId(1), 126..129)
              Assign@(FileId(1), 339..345)
                Name@(FileId(1), 339..340): "i"@(FileId(1), 300..301)
                Name@(FileId(1), 344..345): "d"@(FileId(1), 126..129)

